<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/forgotPasswordConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:context=".ui.forgotpassword.ForgotPasswordFragment">

        <include
            android:id="@+id/include"
            layout="@layout/app_bar" />

        <TextView
            android:id="@+id/forgotPasswordScreenTextView"
            style="@style/Title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/login_screen_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <TextView
            android:id="@+id/resetPasswordScreenMessageTextView"
            style="@style/Title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/password_message"
            android:textAlignment="center"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordScreenTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgotPasswordEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetPasswordScreenMessageTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgotPasswordScreenEmailEditText"
                style="@style/Title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgotPasswordResetButton"
            style="@style/Title2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/login_button"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:theme="@style/Gohy.Button"
            android:enabled="false"
            android:textColor="@color/login_button_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
